<resources>
    <string name="app_name" translatable="false">TestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search" translatable="false">Search</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="favorite" translatable="false">Favorite</string>
    <string name="projects" translatable="false">Projects</string>
    <string name="more" translatable="false">more</string>
    <string name="date">Дата</string>
    <string name="task_title">Текст задачи</string>
    <string name="task_toolbar_title">Задачи</string>
    <string name="channelName" translatable="false">Channel_name</string>
    <string name="channel_description" translatable="false">channel_description</string>
    <string name="all">Все</string>
    <string name="today">Сегодня</string>
    <string name="go" translatable="false">go</string>
    <string name="tasker" translatable="false">Tasker</string>
    <string name="first_step" translatable="false">first_step</string>
    <string name="Settings">Настройки</string>
    <string name="productivity">Продуктивность</string>
    <string name="notification_ru">Уведомления</string>
    <string name="morning_summary">Утренняя сводка</string>
    <string name="night_summary">Вечерний обзор</string>
    <string name="organize_tasks_for_tomorrow">Организуйте задачи на день</string>
    <string name="Check_out_whats_left_to_do">Проверьте, что осталось сделать</string>
    <string name="Transfer_notification_in">Отправлять уведомления в</string>
    <string name="check_tasks">Проверь задачи на сегодня</string>
    <string name="create_tasks_on_next_day">Заполни планы на завтра</string>
    <string name="main">Основное</string>
    <string name="Account">Аккаунт</string>
    <string name="language">Язык</string>
    <string name="main_screen">Главный экран</string>
    <string name="date_and_time">Дата и время</string>
    <string name="week_start_day">Начало недели</string>
    <string name="timezone">Часовой пояс</string>
    <string name="next_week">Следующая неделя</string>
    <string name="weekend">Выходные</string>
    <string name="notification_sound">Звук уведомлений</string>
    <string name="sound">Звук</string>
    <string name="default_string">Стандартный</string>
    <string name="inbox">Входящие</string>

    <string name="monday" translatable="false">Понедельник</string>
    <string name="tuesday" translatable="false">Вторник</string>
    <string name="wednesday" translatable="false">Среда</string>
    <string name="thursday" translatable="false">Четверг</string>
    <string name="friday" translatable="false">Пятница</string>
    <string name="saturday" translatable="false">Суббота</string>
    <string name="sunday" translatable="false">Воскресенье</string>

</resources>