<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:background="@color/baseGray"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="1dp"
            app:cardCornerRadius="12dp"
            android:layout_marginHorizontal="1dp"
            android:layout_marginVertical="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.example.testapp.presentation.customView.ButtonWithDescription
                    android:id="@+id/morning_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/morning_summary"
                    app:description="@string/organize_tasks_for_tomorrow"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="24dp"
                    android:background="@color/baseGray"/>

                <com.example.testapp.presentation.customView.ButtonWithDescription
                    android:id="@+id/night_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/night_summary"
                    app:description="@string/Check_out_whats_left_to_do"/>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>