<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="12dp">

    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/task_title"
        android:paddingHorizontal="12dp"
        android:textFontWeight="400"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/options_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:paddingHorizontal="12dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:layout_marginBottom="-4dp"
                android:backgroundTint="@color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:outlineSpotShadowColor="@color/transparent"
                android:paddingHorizontal="8dp"
                android:text="@string/date"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textFontWeight="600"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_calendar"
                app:iconTintMode="multiply"
                app:strokeColor="@color/green"
                app:strokeWidth="1dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/complete_create_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:layout_marginBottom="-4dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:outlineSpotShadowColor="@color/transparent"
        android:text="@string/go"
        android:textColor="@color/gray"
        android:textFontWeight="400"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/options_scroll_view"
        app:strokeColor="@color/pink"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>